fixed mobile overflow issue

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -6,6 +6,10 @@ body {
   cursor: url()
 }
 
+main {
+  overflow-x: hidden;
+}
+
 
 
 a {
